ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
07/08/08 Remi Ricard (papaDoc)
        * Update unittest for the slider.
        * Rename the new function dJointSetHingeAxisDelta to 
          dJointSetHingeAxisOffset. This remove will remove confusion with 
          the old function dJointSetHingeAnchorDelta
        * Update documentation for the Hinge unittest
        * Remove warning by using REAL()

07/07/08 Daniel K. O.
        * Max Correcting Vel doesn't affect bounciness, as before.

07/03/08 Remi Ricard (papaDoc)
        * Add new function dJointSetHingeAxisDelta
        * Add unittest for this new function

06/17/08 Remi Ricard (papaDoc)

        *  Move the computation of the Relative Rotation for the slider joint
           into a function.
        * Add unittest for to check qrel 

06/17/08 Remi Ricard (papaDoc)

       * Remove unused variables. 
       * Remove a conversion warning between unsigned int and int
        
06/17/08 Remi Ricard (papaDoc)

        * Move the function hingeComputeRelativeRotation as a member of 
          the hinge structure/class.

06/17/08 Remi Ricard (papaDoc)

        *  Move the computation of the Relative Rotation for the fixed joint
           into a function.

06/16/08 Remi Ricard (papaDoc)

        * Add testunit for the dxJointFixed

06/04/08 Daniel K. O.

        * Moved joints to ode/src/joints, converted them to true virtual
          methods.

06/02/08 Daniel K. O.

        * Added an Auto<T> template to step.cpp to handle memory deallocation.

05/09/08 Daniel K. O.

        * Applied patch #1335202: Contact Joint Motion (with some corrections),
          and added demo_motion.

05/01/08 Oleh_Derevenko
